--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    /* font-family: monospace; */
+    font-family: cursive;
     text-align: center;
     color: #b1d9fe;
     background-color: rgb(70, 101, 150);
@@ -30,7 +30,18 @@ h2{
     justify-content: center;
     align-items: center;
 }
-.outer-box{
+.start{
+    text-align: center;
+    margin-top: 3rem;
+    border: none;
+    padding: 1rem 6rem;
+    text-transform: uppercase;
+    background-color: rgb(103, 239, 103);
+    border: 2px solid black;
+    border-radius: 1rem;
+    font-family: cursive;
+    font-size: 1.25rem;
+    color: #234c72;
 }
 .btn{
     height: 100px;
@@ -38,4 +49,9 @@ h2{
     border: 2px solid black;
     margin: 1rem;
     border-radius: 1rem;
+    
+}
+footer p{
+    text-align: end;
+    margin: 4rem 2rem;
 }
